--- a/javabasic/pom.xml
+++ b/javabasic/pom.xml
@@ -59,6 +59,11 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.9.7</version>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.30</version>
+		</dependency>
 	</dependencies>
 
 	<build>
